# Flask_simple_blog

flask-demo/: hellokitty.py  kitty.py  pyproject.toml
flask-demo/templates/: layout.html  lottery.html
flask-demo/templates/pages/: about.html
simple-flask-blog/: .dockerignore  .env  Dockerfile  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml
simple-flask-blog/apps/: __init__.py
simple-flask-blog/apps/error/: handlers.py
simple-flask-blog/apps/post/: views.py
simple-flask-blog/apps/user/: forms.py  views.py
simple-flask-blog/db/: blog.db
simple-flask-blog/migrations/versions/: 0795d95ed0f6_add_user_id_with_nullable_true.py  24874b7e20d2_.py  58228692079b_.py  976fedba66e4_.py  de2c2e2e36f1_.py
simple-flask-blog/models/: post.py  user.py
simple-flask-blog/models/mixnis/: datetime.py
simple-flask-blog/templates/: layout.html.jinja
simple-flask-blog/templates/errors/: 404.html.jinja
simple-flask-blog/templates/helpers/: form_field.html.jinja
simple-flask-blog/templates/posts/: edit.html.jinja  index.html.jinja  new.html.jinja  show.html.jinja
simple-flask-blog/templates/shared/: navbar.html  navbar.html.jinja
simple-flask-blog/templates/users/: login.html.jinja  new.html.jinja
